infra/k8s/client-depl.yaml
apiVersion: apps/v1
#Deployment object
kind: Deployment
metadata: 
  name: client-depl
#Deployment behavior
spec:
#Nunber of pods to create running a particular image
  replicas: 1
  #Find all the types of pods that have been created and look for the comments pod
  selector:
    matchLabels:
      app: client
  #Exact config of pod we want the deployment to create
  template:
    metadata: 
      labels:  
        app: client
    #Configuration
    spec:
      containers:
        - name: client
          image: paulgagni/client
---
apiVersion: v1 
kind: Service
metadata:
  name: client-clusterip-srv
spec:
  selector:
    app: client
  #This is optional as the default will be ClusterIP if not defined
  type: ClusterIP
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
