infra/k8s/posts-srv.yaml
apiVersion: v1 
kind: Service
metadata:
  name: posts-srv
spec:
  #NodePort makes pods accessible from outside the cluster (Dev purposes)
  type: NodePort
  selector:
    app: posts
  #Ports that we want to expose on the target pod
  ports:
  #The ports service is listening for traffic on port 4000 (index.js)
    - name: posts
      protocol: TCP
      #Open access on port 4000. This is the NodePort service port - Most of the time the port and targetport are going to be the same.
      port: 4000
      #Actual port the app is listening for traffic - The NodePort service redirects traffic to this port
      targetPort: 4000
