infra/k8s/query-srv.yaml
apiVersion: v1 
kind: Service
metadata:
  name: query-srv
spec:
  #NodePort makes pods accessible from outside the cluster (Dev purposes)
  type: NodePort
  selector:
    app: query
  #Ports that we want to expose on the target pod
  ports:
  #The ports service is listening for traffic on port 4002 (index.js)
    - name: query
      protocol: TCP
      #Open access on port 4002. This is the NodePort service port - Most of the time the port and targetport are going to be the same.
      port: 4002
      #Actual port the app is listening for traffic - The NodePort service redirects traffic to this port
      targetPort: 4002
